@@ -17,6 +17,7 @@
 package org.apache.solr.response.transform;
 
 import java.io.IOException;
+import java.util.Set;
 
 import org.apache.lucene.document.Document;
 import org.apache.lucene.index.IndexableField;
@@ -39,6 +40,7 @@ import org.apache.solr.search.DocList;
 import org.apache.solr.search.QParser;
 import org.apache.solr.search.QueryWrapperFilter;
 import org.apache.solr.search.SyntaxError;
+import org.apache.solr.search.SolrDocumentFetcher;
 
 /**
  *
@@ -135,11 +137,20 @@ class ChildDocTransformer extends DocTransformer {
       Query query = new ToChildBlockJoinQuery(parentQuery, parentsFilter);
       DocList children = context.getSearcher().getDocList(query, childFilterQuery, new Sort(), 0, limit);
       if(children.matches() > 0) {
+        SolrDocumentFetcher docFetcher = context.getSearcher().getDocFetcher();
+
+        Set<String> dvFieldsToReturn = docFetcher.getNonStoredDVs(true);
+        boolean shouldDecorateWithDVs = dvFieldsToReturn.size() > 0;
         DocIterator i = children.iterator();
+
         while(i.hasNext()) {
           Integer childDocNum = i.next();
           Document childDoc = context.getSearcher().doc(childDocNum);
           SolrDocument solrChildDoc = DocsStreamer.convertLuceneDocToSolrDoc(childDoc, schema);
+
+          if (shouldDecorateWithDVs) {
+            docFetcher.decorateDocValueFields(solrChildDoc, childDocNum, dvFieldsToReturn);
+          }
 
           // TODO: future enhancement...
           // support an fl local param in the transformer, which is used to build
